<?xml version="1.0"?>
<package format="3">
  <name>pal_hey5</name>
  <version>4.0.0</version>
  <description>The pal_hey5 package</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <author email="aina.irisarri@pal-robotics.com">Aina Irisarri</author>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <exec_depend>pal_hey5_description</exec_depend>
  <exec_depend>pal_hey5_controller_configuration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
